kubernetes/main/apps/matrix/continuwuity/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: continuwuity
  namespace: matrix
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: continuwuity
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-external-networking
      toPorts:
        - ports:
            - port: "8008"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    # federation reaches arbitrary homeservers; 8448 is the undelegated default
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8448"
              protocol: TCP
            - port: "80"
              protocol: TCP
